# parallel_lab5_cpp

./: .gitignore  CMakeLists.txt  CMakePresets.json
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
source/: main.cpp  matrix.cpp  matrix.hpp  matrix_utils.cpp  matrix_utils.hpp
